--- a/public/html structure test/book.html
+++ b/public/html structure test/book.html
@@ -9,20 +9,6 @@
 </head>
 <body>
 
-<div class="frontcover">
-<img src="canvas.jpg"/>
-<h1>The Nature of Code</h1>
-<h2>Subtitle</h2>
-<h3>h3</h3>
-<p>Some text</p>
-</div>
-
-<div class="halftitlepage">
-<h1 class="no-toc">The Nature of Code</h1>
-<h2 class="no-toc">Subtitle</h2>
-<h3 class="no-toc">X Edition</h3>
-</div>
-
 <div class="titlepage">
 <h1 class="no-toc">The Nature of Code</h1>
 <h2 class="no-toc">Subtitle</h2>
@@ -43,19 +29,19 @@
 <ul class="toc">
 <li class="frontmatter"><a href="#toc-h-1">Table of Contents</a></li>
 <li class="frontmatter"><a href="#preface-h-1">Preface</a></li>
-<li class="chapter"><a href="#html-h-1">The Web and HTML</a>
+<li class="chapter"><a href="#html-h-1">Vectors</a>
   <ul>
-  <li class="section"><a href="#the-web">The Web</a>
+  <li class="section"><a href="#1-1">You complete me</a>
     <ul>
-    <li class="section"><a href="#development">Development of the Web</a></li>
-    <li class="section"><a href="#images">Adding images</a></li>
+    <li class="section"><a href="#1-2">Second Section</a></li>
+    <li class="section"><a href="#1-3">Third Section</a></li>
     </ul>
   </li>
   </ul>
 </li>
-<li class="chapter"><a href="#css-h-1">CSS</a>
+<li class="chapter"><a href="#css-h-1">Second</a>
   <ul>
-  <li class="section"><a href="#rules">Rules and Style Sheets</a></li>
+  <li class="section"><a href="#rules">Some Section</a></li>
   </ul>
 </li>
 <li class="endmatter"><a href="#index-h-1">Index</a></li>
@@ -81,7 +67,7 @@ Oslo/Antibes<br />July 2012</p>
 
 </div>
 <div class="chapter" id="html-h-1">
-<h1 style="counter-reset: page 1">Chapter 1.  Vectors</h1>
+<h1 style="counter-reset: page 1">Vectors</h1>
 <p class="sidenote">Roger, Roger. What's our vector, Victor?</p>
 <!--><p class="quote-attribution">Captain Oveur (Airplane)</p>-->
 
